[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pck_minh_data_analysis"
version = "0.0.1"
description = "My personal data science utilities"
requires-python = ">=3.8"
dependencies = [
    "pandas"
    ,"numpy"
    ,"matplotlib"
    ,"seaborn"
    ,"requests"
    ,"yaml"
    ,"pathlib"
    ,"sklearn"
    # List any other packages your code needs here
]

[tool.hatch.build.targets.wheel]
packages = ["src/pck_minh_data_analysis"]